# minecraft-icons

./: .gitignore  README.md  pyproject.toml
mc_assets/: downloader.py  main.py  progress.py
