[tool.poetry]
name = "mc-assets"
version = "0.1.0"
description = ""
authors = ["Baily Troyer <bailytroyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "^1.9.3"
responses = "^0.20.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
